refactor /diagnose endpoint
