# PodMD.Api/Requests/DiagnoseClusterPodRequest.cs
@@ -1,8 +1,0 @@
-namespace PodMD.Api.Requests;
-
-public record DiagnoseClusterPodRequest(
-    string Namespace,
-    string Pod,
-    int? Tail,
-    DateTimeOffset? SinceTime,
-    IEnumerable<Guid>? KnowledgeBaseGuids);
